@@ -19,6 +19,7 @@ News
 
   - Added module ``cpuinfo``.
   - Added module ``threadpool``.
+  - ``sequtils.distnct`` has been renamed to ``sequtils.deduplicate``.
 
 
 2014-04-21 Version 0.9.4 released
